--- a/src/css/styles/09-custom-properties.css
+++ b/src/css/styles/09-custom-properties.css
@@ -8,20 +8,65 @@
   --red: #f00;
   --green: #0f0;
   --blue: #00f;
-}
 
-.container{
-  /* 지역 변수 정의 */
-  /* --secondary-color: #c76e9a; */
-  
-  /* --secondary-color 속성이 없을 때 대안으로 #2ecc71가 적용되도록 설정 */
-  h1{
-    background-color: var(--primary-color, #2ecc71);
+  /* size */
+  --small: .75rem;
+  --medium: .875rem;
+  --default: 1rem;
+  --large: 1.125rem;
+}
+.wrapper{
+  button.small{
+  font-size: var(--small)  
+  }
+
+  button.medium{
+  font-size: var(--medium)
+  }
+
+  button.default{
+  font-size: var(--default)
+  }
+
+  button.large{
+  font-size: var(--large)
   }
 }
 
-p{
-  background-color: var(--primary-color);
+.text-card-1{
+  /* 지역 변수 정의 */
+  --bg-color: var(--green);
+  --border-color: var(--red);
+  
+  /* --green 속성이 없을 때 대안으로 #2ecc71가 적용되도록 설정 */
+  h1{
+    background-color: var(--bg-color);
+  }
+
+  p{
+    border-width: 10px;
+    border-style: solid;
+    border-color: var(--border-color);
+  }
 }
+
+.text-card-2{
+  /* 지역 변수 정의 */
+  --bg-color: var(--blue);
+  --border-color: var(--green);
+  
+  /* --green 속성이 없을 때 대안으로 #2ecc71가 적용되도록 설정 */
+  h1{
+    background-color: var(--bg-color);
+  }
+
+  p{
+    border-width: 10px;
+    border-style: solid;
+    border-color: var(--border-color);
+  }
+}
+
+
 
 
