변수에 변수를 값으로 할당하기

--- a/src/css/styles/09-custom-properties.css
+++ b/src/css/styles/09-custom-properties.css
@@ -16,20 +16,24 @@
   --large: 1.125rem;
 }
 .wrapper{
-  button.small{
-  font-size: var(--small)  
+  button.open{
+  --font-size: var(--small);
+  font-size: var(--font-size)  
   }
 
-  button.medium{
-  font-size: var(--medium)
+  button.close{
+   --font-size: var(--default);
+  font-size: var(--font-size)
   }
 
-  button.default{
-  font-size: var(--default)
+  button.popup{
+  --font-size: var(--large);
+  font-size: var(--font-size)
   }
 
-  button.large{
-  font-size: var(--large)
+  button.info{
+  --font-size: var(--medium);
+  font-size: var(--font-size)
   }
 }
 
