--- a/src/css/styles/09-custom-properties.css
+++ b/src/css/styles/09-custom-properties.css
@@ -1,31 +1,39 @@
 /* 전역 변수 정의 */
 :root {
-  --primary-color: #3498db;
-  --secondary-color: #2ecc71;
-
+  /* 색상 팔레트 */
   --white: #fff;
   --black: #000;
   --red: #f00;
   --green: #0f0;
   --blue: #00f;
+  --orange: orange;
+  --yellow: yellow;
+  --light-blue: aqua;
+
+  /* 주요 색상 */
+  --primary-color: var(--blue);
+  --secondary-color: var(--light-blue);
+  --accent-color: var(--yellow);
+  --border-color: var(--red);
 
   /* size */
   --small: .75rem;
   --medium: .875rem;
   --default: 1rem;
   --large: 1.125rem;
-}
-.wrapper{
-  button{
-    font-size: var(--font-size, 1rem);
-    background-color: var(--bg-color, #fff);
-    color: var(--text-color, #000);
-  }
 
-  button.open{
+  --text12: 0.75rem;
+}
+
+.wrapper{
   --font-size: var(--small);
   --bg-color: var(--green);
   --text-color: var(--red);
+
+  button{
+    font-size: var(--font-size, 1rem);
+    background-color: var(--bg-color, #fff);
+    color: var(--primary-color, #000);
   }
 
   button.close{
