--- a/src/css/styles/11-float-ui.css
+++ b/src/css/styles/11-float-ui.css
@@ -27,6 +27,9 @@ body{
 
       &[lang="en"]{
         font-size: 0.5em;
+        /* background: yellow; */
+        position: relative;
+        top: 2px;
       }
     }
   }
@@ -42,10 +45,10 @@ body{
     border-radius: var(--radius);
     width: 120px;
     shape-outside: circle(50%);
-
+    
     img{
       border-radius: var(--radius);
-      max-width: 100%; /* 80px */
+      width: 100%;
       aspect-ratio: 1/1;
       object-fit: cover;
       object-position: 0 -20px;
