avatar 컴포넌트 상태 디자인

--- a/src/ui/components/avatar/avatar.html
+++ b/src/ui/components/avatar/avatar.html
@@ -17,7 +17,7 @@
     <img src="/src/assets/face/face1.jpg" alt="사용자명" />
     <figcaption class="state offline"><span class="sr-only">오프라인</span></figcaption>
   </figure>
-  <figure class="avatar">
+  <figure class="img-avatar">
     <img src="/src/assets/face/face1.jpg" alt="사용자명" />
     <figcaption class="state online"><span class="sr-only">온라인</span></figcaption>
   </figure>
