--- a/src/ui/components/avatar/avatar.css
+++ b/src/ui/components/avatar/avatar.css
@@ -1,1 +1,46 @@
+@import "/src/common/modern-reset.css";
+@import "/src/common/a11y.css";
+
 /* 아바타 컴포넌트 */
+/* 인터렉션이 없는 이미지 컴포넌트 */
+.img-avatar{
+  --size: 4rem;
+  --radius: 50%;
+
+  border: 1px solid green;
+  background: yellow;
+  width: var(--size);
+  position: relative;
+
+  img{
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: var(--radius);
+  }
+
+  .state{
+    width: 25%;
+    aspect-ratio: 1/1;
+    background: red;
+    border-radius: var(--radius);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+}
+
+/* 인터렉션이 있는 버튼 컴포넌트 */
+.button-avatar{
+  --size: 4rem;
+  
+  background: transparent;
+  border: 0;
+  padding: 0;
+  width: var(--size);
+
+  img{
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+  }
+}
