--- a/src/ui/components/avatar/avatar.html
+++ b/src/ui/components/avatar/avatar.html
@@ -15,18 +15,18 @@
   <h2>인터렉션이 없는 아바타 컴포넌트</h2>
   <figure class="img-avatar">
     <img src="/src/assets/face/face1.jpg" alt="사용자명" />
-    <figcaption class="state offline"><span class="sr-only">오프라인</span></figcaption>
+    <figcaption class="state"><span class="sr-only">오프라인</span></figcaption>
   </figure>
   <figure class="img-avatar">
     <img src="/src/assets/face/face1.jpg" alt="사용자명" />
-    <figcaption class="state online"><span class="sr-only">온라인</span></figcaption>
+    <figcaption class="state is-active"><span class="sr-only">온라인</span></figcaption>
   </figure>
 
   <h2>인터렉션이 있는 아바타 컴포넌트</h2>
-  <button type="button" class="button-avatar state-offline" aria-label="오프라인">
+  <button type="button" class="button-avatar" aria-label="오프라인">
     <img src="/src/assets/face/face1.jpg" alt="사용자명" />
   </button>
-  <button type="button" class="button-avatar state-online" aria-label="온라인">
+  <button type="button" class="button-avatar is-active" aria-label="온라인">
     <img src="/src/assets/face/face1.jpg" alt="사용자명" />
   </button>
 
